Fix z-index collision between events' tabs and section menu

--- a/app/assets/stylesheets/redesign/components/_main-content-section.sass
+++ b/app/assets/stylesheets/redesign/components/_main-content-section.sass
@@ -4,6 +4,7 @@
     position: center center
     repeat: no-repeat
     size: cover
+  z-index: 1
 
   *
     position: relative
